# libopensync-plugin-iphone

./: AUTHORS  CMakeLists.txt
cmake/modules/: Findlibiphone.cmake  Findlibplist.cmake
src/: CMakeLists.txt  iphone.c  pcont2osync.xslt  xslt_aux.h
