LINK_DIRECTORIES(  ${OPENSYNC_LIBRARY_DIRS} ${LIBIPHONE_LIBRARY_DIRS} ${LIBPLIST_LIBRARY_DIRS} ${LIBXML2_LIBRARY_DIRS} ${LIBXSLT_LIBRARY_DIRS} )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${OPENSYNC_INCLUDE_DIRS} ${LIBIPHONE_INCLUDE_DIRS} ${LIBPLIST_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS} ${LIBXSLT_INCLUDE_DIRS} )

### Simple Synchronization Plugin ########
OPENSYNC_PLUGIN_ADD( iphone-sync iphone.c )
TARGET_LINK_LIBRARIES( iphone-sync ${OPENSYNC_LIBRARIES} ${LIBIPHONE_LIBRARIES} ${LIBPLIST_LIBRARIES})
OPENSYNC_PLUGIN_INSTALL( iphone-sync)

# Install config template       
OPENSYNC_PLUGIN_CONFIG( iphone-sync )
OPENSYNC_PLUGIN_CONFIG( pcont2osync.xslt )